# Code-Romeo

./: .gitignore  .gitmodules  ANALYSIS_SUMMARY.md  CACHE_BEHAVIOR_ANALYSIS.md  CACHE_OPTIMIZATION.md  CMakeLists.txt  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  DIAGRAMS.md  ECS_INTERNAL_DESIGN.md  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  MIGRATION_GUIDE.md  NO_DESTROY_APPROACH.md  PROJECT_ANALYSIS.md  QUICK_REFERENCE.md  README.md  REFACTORED_SYSTEM_REVIEW.md  REFACTORING_DOCS.md  REFACTORING_SUMMARY.md  REFACTORING_TIPS.md  REFACTOR_STATUS_ANALYSIS.md  RENDERER_REFACTOR_CONTINUATION.md  SECURITY.md  START_HERE.md  ShuildRomeo.c  TESTING_GUIDE.md  error.c  shuild.c  shuild.h
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
build-test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-test/Testing/Temporary/: CTestCostData.txt
build-test/dependencies/cglm/: Makefile  cglmConfig.cmake  cmake_install.cmake  libcglm.so.0.9.6
build-test/dependencies/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
build-test/dependencies/glfw/src/: Makefile  cmake_install.cmake
build-test/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: Global.h  RJGlobal.h  ResourceManager.h
include/app/: Renderer.h  Resources.h
include/systems/: Audio.h  Input.h  Physics.h  Renderer.h
include/tools/: Context.h  Entity.h  Input.h  Physics.h  Renderer.h  Resource.h  Resources.h
include/user/: App.h
include/utilities/: Algebra.h  Arrays.h  HashMap.h  ListArray.h  ListArrayDynamic.h  ListLinked.h  Maths.h  String.h  Timer.h  Vector.h  Vectors.h
include/wrappers/: Context.h
resources/models/: Freigther_BI_Export.mtl  floatplane.mtl  p226.mtl
resources/shaders/: debugFragment.glsl  debugVertex.glsl  fragment.glsl  vertex.glsl
shader_examples/: README.md  fragment_shader.frag  vertex_shader.vert
src/: Global.c  RJGlobal.c  Timer.c  main.c  mainCollisionTest.c  mainRenderTest.c
src/app/: App.c  Renderer.c  Resources.c
src/systems/: Audio.c  Input.c  Physics.c  Renderer.c
src/tools/: Context.c  Entitiy.c  Entity.c  Input.c  Physics.c  Renderer.c  Resource.c  Resources.c
src/user/: App.c  Main.c
src/utilities/: Algebra.c  Arrays.c  HashMap.c  ListArray.c  ListArrayDynamic.c  ListLinked.c  Maths.c  String.c  Timer.c  Vector.c  Vectors.c
src/wrappers/: Context.c
tests/: CMakeLists.txt  shuild.c
