# Tests directory CMakeLists.txt
# This is a placeholder for future test implementation

# For now, just build the test build script if needed
# Future: Add unit tests with a framework like Unity or cmocka

message(STATUS "Test infrastructure is minimal - consider adding unit tests")
message(STATUS "See PROJECT_ANALYSIS.md section 6 for recommendations")

# Add a simple build test
add_executable(test_build_simple
    ${CMAKE_SOURCE_DIR}/tests/shuild.c
)

# This test just verifies the test file compiles
# It doesn't actually run meaningful tests yet
add_test(NAME test_compilation
    COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target test_build_simple
)
